.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
12:04:29 **** Rebuild of configuration Debug for project MILESI_MARCO_CPP ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Studente.o" "..\\src\\Studente.cpp" 
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Dipendente.o" "..\\src\\Dipendente.cpp" 
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Persona.o" "..\\src\\Persona.cpp" 
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\MILESI_MARCO_CPP.o" "..\\src\\MILESI_MARCO_CPP.cpp" 
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Lista.o" "..\\src\\Lista.cpp" 
..\src\Lista.cpp: In member function 'void Lista::etaMedia()':
..\src\Lista.cpp:26:32: error: 'mediaEtaStudenti' was not declared in this scope
    i += mediaEtaStudenti(it,eta);
                                ^
12:05:17 **** Incremental Build of configuration Debug for project MILESI_MARCO_CPP ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\StudenteDipendente.o" "..\\src\\StudenteDipendente.cpp" 
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Lista.o" "..\\src\\Lista.cpp" 
..\src\Lista.cpp: In member function 'void Lista::etaMedia()':
..\src\Lista.cpp:26:21: error: 'media' was not declared in this scope
    i += media(it,eta);
                     ^
12:05:34 **** Incremental Build of configuration Debug for project MILESI_MARCO_CPP ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Lista.o" "..\\src\\Lista.cpp" 
g++ -o MILESI_MARCO_CPP.exe "src\\Dipendente.o" "src\\Lista.o" "src\\MILESI_MARCO_CPP.o" "src\\Persona.o" "src\\Studente.o" "src\\StudenteDipendente.o" 
14:33:10 **** Build of project cycinf-sample ****
make -k all 
Cannot run program "make": Launching failed

Error: Program "make" not found in PATH
PATH=[C:/Program Files/Java/jre1.8.0_121/bin/server;C:/Program Files/Java/jre1.8.0_121/bin;C:/Program Files/Java/jre1.8.0_121/lib/amd64;C:\ProgramData\Oracle\Java\javapath;C:\Windows\system32;C:\Windows;C:\Windows\System32\Wbem;C:\Windows\System32\WindowsPowerShell\v1.0\;C:\Program Files (x86)\NVIDIA Corporation\PhysX\Common;C:\Program Files (x86)\Intel\OpenCL SDK\2.0\bin\x86;C:\Program Files (x86)\Intel\OpenCL SDK\2.0\bin\x64;C:\Program Files (x86)\Windows Live\Shared;C:\Users\miles\AppData\Local\Microsoft\WindowsApps;C:\adb;C:\Program Files\Microsoft SQL Server\130\Tools\Binn\;C:\Program Files (x86)\Microsoft Emulator Manager\1.0\;C:\Program Files (x86)\Windows Kits\10\Windows Performance Toolkit\;C:\Program Files\nodejs\;F:\Program Files\MATLAB\R2017a\runtime\win64;F:\Program Files\MATLAB\R2017a\bin;C:\WINDOWS\system32;C:\WINDOWS;C:\WINDOWS\System32\Wbem;C:\WINDOWS\System32\WindowsPowerShell\v1.0\;C:\Program Files (x86)\Ampps\php;C:\ProgramData\ComposerSetup\bin;C:\Program Files (x86)\Skype\Phone\;C:\Program Files\TortoiseSVN\bin;C:\HashiCorp\Vagrant\bin;C:\Program Files\Java\jdk1.8.0_121\bin\javac.exe;C:\Users\miles\AppData\Local\GitHub\PortableGit_f02737a78695063deace08e96d5042710d3e32db\cmd;C:\Users\miles\AppData\Roaming\npm;C:\Users\miles\AppData\Local\Microsoft\WindowsApps;C:\Users\miles\AppData\Local\atom\bin;C:\Users\miles\AppData\Roaming\Composer\vendor\bin;C:\Users\miles\AppData\Local\GitHubDesktop\bin;C:\WINDOWS\system32;]
14:33:16 **** Rebuild of configuration Debug for project MILESI_MARCO_CPP ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Persona.o" "..\\src\\Persona.cpp" 
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Dipendente.o" "..\\src\\Dipendente.cpp" 
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Studente.o" "..\\src\\Studente.cpp" 
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\StudenteDipendente.o" "..\\src\\StudenteDipendente.cpp" 
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Lista.o" "..\\src\\Lista.cpp" 
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\MILESI_MARCO_CPP.o" "..\\src\\MILESI_MARCO_CPP.cpp" 
g++ -o MILESI_MARCO_CPP.exe "src\\Dipendente.o" "src\\Lista.o" "src\\MILESI_MARCO_CPP.o" "src\\Persona.o" "src\\Studente.o" "src\\StudenteDipendente.o" 
14:33:33 **** Auto Build of project cycinf-sample ****
make -k all 
Cannot run program "make": Launching failed

Error: Program "make" not found in PATH
PATH=[C:/Program Files/Java/jre1.8.0_121/bin/server;C:/Program Files/Java/jre1.8.0_121/bin;C:/Program Files/Java/jre1.8.0_121/lib/amd64;C:\ProgramData\Oracle\Java\javapath;C:\Windows\system32;C:\Windows;C:\Windows\System32\Wbem;C:\Windows\System32\WindowsPowerShell\v1.0\;C:\Program Files (x86)\NVIDIA Corporation\PhysX\Common;C:\Program Files (x86)\Intel\OpenCL SDK\2.0\bin\x86;C:\Program Files (x86)\Intel\OpenCL SDK\2.0\bin\x64;C:\Program Files (x86)\Windows Live\Shared;C:\Users\miles\AppData\Local\Microsoft\WindowsApps;C:\adb;C:\Program Files\Microsoft SQL Server\130\Tools\Binn\;C:\Program Files (x86)\Microsoft Emulator Manager\1.0\;C:\Program Files (x86)\Windows Kits\10\Windows Performance Toolkit\;C:\Program Files\nodejs\;F:\Program Files\MATLAB\R2017a\runtime\win64;F:\Program Files\MATLAB\R2017a\bin;C:\WINDOWS\system32;C:\WINDOWS;C:\WINDOWS\System32\Wbem;C:\WINDOWS\System32\WindowsPowerShell\v1.0\;C:\Program Files (x86)\Ampps\php;C:\ProgramData\ComposerSetup\bin;C:\Program Files (x86)\Skype\Phone\;C:\Program Files\TortoiseSVN\bin;C:\HashiCorp\Vagrant\bin;C:\Program Files\Java\jdk1.8.0_121\bin\javac.exe;C:\Users\miles\AppData\Local\GitHub\PortableGit_f02737a78695063deace08e96d5042710d3e32db\cmd;C:\Users\miles\AppData\Roaming\npm;C:\Users\miles\AppData\Local\Microsoft\WindowsApps;C:\Users\miles\AppData\Local\atom\bin;C:\Users\miles\AppData\Roaming\Composer\vendor\bin;C:\Users\miles\AppData\Local\GitHubDesktop\bin;C:\WINDOWS\system32;]
14:34:18 **** Auto Build of project cycinf-sample ****
make -k all 
mkdir -p .cych
rm -f .cych/cvars
touch .cych/start-stamp
cyclone-inf --inf --nomerge --ovfat -detailedlocation  sample.cyc || (a=$?; rm -f .cych/start-stamp; exit $a)
/bin/sh: cyclone-inf: command not found
make: *** [cycinf.mk:34: .cych/sample.cyc] Error 127
make: Target 'all' not remade because of errors.
Info: Nothing to build for MILESI_MARCO_CPP
Info: Nothing to build for MILESI_MARCO_CPP
